--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -56,13 +56,6 @@ ul {
 	overflow: auto;
 }
 
-/*--------------------usado em coluna-menu--------------------*/
-.col-3 {
-	flex: 0 0 270px !important;
-	top: 0px !important;
-	transition: 0.5s !important;
-}
-
 /*--------------------usado em coluna-corpo-------------------*/
 .col-9 {
 	height: 100%;
@@ -109,7 +102,7 @@ ul {
 	width: 70%;
 }
 
-p {
+.texto {
     font-size: 19px !important;
 	margin-top: 21px !important;
 	margin-left: 21px !important;
@@ -142,33 +135,3 @@ span {
 	height: 30px;
 	border: 0px;   
   }
-
-@media only screen and (max-width: 1000px) {
-	.col-3 {
-		-ms-flex: 0 0 25%;
-		transition: 0.5s;
-		flex: 0 0 50px !important;
-		max-width: 25%;
-	}
-
-	#menu > ul > li {
-		height: 50px;
-	}
-
-	span {
-		visibility: hidden;
-	}
-
-	span:hiden {
-		visibility: hidden;
-	}
-
-	p {
-		visibility: hidden;
-	}
-
-	.p-card {
-		flex: 50% !important;
-		max-width: 100% !important;
-	}
-}
